[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/scripts/Lancer.gd" type="Script" id=1]
[ext_resource path="res://assets/fleshling.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 39.1667 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Lance/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/path = NodePath("Lance/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "die"
length = 0.4

[sub_resource type="Animation" id=2]
resource_name = "walk"
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 2, 0 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 16.4815, 39.1667 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 69.0625, 10 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 34.8828, 10 )

[node name="Lancer" type="KinematicBody2D"]
scale = Vector2( 2.56, 2.56 )
collision_layer = 4
collision_mask = 22
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -38.6667 )
texture = ExtResource( 2 )
hframes = 3

[node name="CollisionBox" type="CollisionShape2D" parent="."]
position = Vector2( 0, -39.1667 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "walk"
anims/RESET = SubResource( 3 )
anims/attack = SubResource( 8 )
anims/die = SubResource( 4 )
anims/walk = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -0.185185, -39.1667 )
shape = SubResource( 5 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="PlayerSensor" type="Area2D" parent="."]
visible = false
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerSensor"]
position = Vector2( -86.4063, -39.0625 )
shape = SubResource( 6 )

[node name="Lance" type="KinematicBody2D" parent="." groups=["enemyWeapons"]]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lance"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( -52.2266, -39.0625 )
shape = SubResource( 7 )
disabled = true

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="PlayerSensor" to="." method="_on_PlayerSensor_body_entered"]
